--- a/index.html
+++ b/index.html
@@ -12,25 +12,24 @@
 <body>
     <div class="container">
         <div class="mainContainer" >
-            <div>
+            <div class="hi">
                 <div id="logo">
                     <img src="./Images/logo.png" alt="logo">
                 </div>
-                <header>
-                    <nav class="midH">
-                        <a> Model S</a>
-                        <a>Model 3 </a>
-                        <a>Model X</a>
-                        <a>Model Y</a>
-                        <a>Solar Roof</a>
-                        <a>Solar Panels</a>
-                    </nav>
-                    <nav class="rightH">
-                        <a>Shop</a>
-                        <a>Account</a>
-                        <a>Menu</a>
-                    </nav>
-                </header>
+                <div class="midH">
+                    <a> Model S</a>
+                    <a>Model 3 </a>
+                    <a>Model X</a>
+                    <a>Model Y</a>
+                    <a>Solar Roof</a>
+                    <a>Solar Panels</a>
+                </div>
+            
+                <div class="rightH">
+                    <a>Shop</a>
+                    <a>Account</a>
+                    <a>Menu</a>
+                </div>
             </div>
             <div class="bodyContainer">
                 <h1>Model 3</h1>
